...
                                        <textInputTraits key="textInputTraits"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Search Text Field"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
...
                                        <buttonConfiguration key="configuration" style="plain" image="magnifyingglass" catalog="system"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Search city"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
...
                                        <nil key="highlightedColor"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="City Label"/>
                                        </userDefinedRuntimeAttributes>
                                    </label>
...
                                        <nil key="highlightedColor"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Date Label"/>
                                        </userDefinedRuntimeAttributes>
                                    </label>
...
                                        <nil key="highlightedColor"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Temperature Label"/>
                                        </userDefinedRuntimeAttributes>
                                    </label>
...
                                                <nil key="highlightedColor"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Temperature minimum"/>
                                                </userDefinedRuntimeAttributes>
                                            </label>
...
                                        <nil key="highlightedColor"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Description Label"/>
                                        </userDefinedRuntimeAttributes>
                                    </label>
...
                                                <nil key="highlightedColor"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Temperature maximum"/>
                                                </userDefinedRuntimeAttributes>
                                            </label>
...
